2010-06-29  Mario Sanchez Prada  <msanchez@igalia.com>

        Reviewed by Xan Lopez.

        [Gtk] Make DRT more coherent with other ports to allow reusing more tests
        https://bugs.webkit.org/show_bug.cgi?id=40009

        Make sure "AXRole: ", "AXTitle: " and "AXDescription: " prefixes
        are used when returning those values, for coherency with other ports.

        * DumpRenderTree/gtk/AccessibilityUIElementGtk.cpp:
        (AccessibilityUIElement::role):
        (AccessibilityUIElement::title):
        (AccessibilityUIElement::description):

2010-06-29  Sheriff Bot  <webkit.review.bot@gmail.com>

        Unreviewed, rolling out r62106.
        http://trac.webkit.org/changeset/62106
        https://bugs.webkit.org/show_bug.cgi?id=41346

        "Broke editing tests" (Requested by xan_ on #webkit).

        * Scripts/old-run-webkit-tests:

2010-06-29  Mario Sanchez Prada  <msanchez@igalia.com>

        Reviewed by Xan Lopez.

        Ensure DRT loads GAIL (Gtk+ module), for a11y tests
        https://bugs.webkit.org/show_bug.cgi?id=38648

        Add the GTK_MODULES envvar (set to "gail") to the clean
        environment when running DRT for the Gtk+ port

        * Scripts/old-run-webkit-tests:

2010-06-28  Adam Barth  <abarth@webkit.org>

        Unreviewed.

        Switch test-html5-parser back to using runner.html.

        * Scripts/test-html5-parser:

2010-06-28  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.

        Restore webkit-runner.html for use with new tree builder
        https://bugs.webkit.org/show_bug.cgi?id=41317

        For now, we just want to run webkit-runner when we test-html5-parser.

        * Scripts/test-html5-parser:

2010-06-23  John Gregg  <johnnyg@google.com>

        Reviewed by Kent Tamura.

        add ENABLE_DIRECTORY_UPLOAD build support
        https://bugs.webkit.org/show_bug.cgi?id=41100

        * Scripts/build-webkit:

2010-06-28  Gustavo Noronha Silva  <gns@gnome.org>
