@@ -1,3 +1,13 @@
+2010-06-29  Diego Gonzalez  <diegohcg@webkit.org>
+
+        Reviewed by Kenneth Rohde Christiansen.
+
+        [Qt] Make switchFocus() method works with QGraphicsWebView in Qt DRT
+        https://bugs.webkit.org/show_bug.cgi?id=41172
+
+        * DumpRenderTree/qt/DumpRenderTreeQt.cpp:
+        (WebCore::DumpRenderTree::switchFocus):
+
 2010-06-29  Mario Sanchez Prada  <msanchez@igalia.com>
 
         Reviewed by Xan Lopez.
